getting the spacing for the cards correct

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -134,7 +134,7 @@ a {
 .artist-info {
 	background-color:#848484;
 	padding: 10px 10px 10px 10px;
-	margin-bottom: 0px;
+	
 	cursor:pointer;
 	padding-right: 10px;
 
